--- a/srcindex.html
+++ b/srcindex.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Webpack App</title>
-  <link href="dist//inuit.css?sourceMap" rel="stylesheet"></head>
+  <link href="dist//inuit.css?sourceMap" rel="stylesheet"><link href="dist//inuit.min.css" rel="stylesheet"></head>
   <body>
   <script type="text/javascript" src="dist/js/inuit.js"></script></body>
 </html>
